--- a/index.html
+++ b/index.html
@@ -3,150 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login and Upload Documents</title>
+    <title>SRNK Associates - Accountancy & Tax Firm</title>
 
-    <!-- FirebaseUI for Authentication -->
-    <script src="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.css" />
-    
-    <!-- Firebase Compatibility SDK for accessing firebase.initializeApp() -->
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-storage-compat.js"></script>
+    <!-- Google Fonts for professional typography -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <!-- Bootstrap 5 for better styling and responsiveness -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h2>Login with Email and Password</h2>
 
-    <!-- Login Form -->
-    <div id="login-form">
-        <label for="email">Email:</label>
-        <input type="email" id="email" placeholder="Enter your email" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" placeholder="Enter your password" required>
-        <button id="login-button">Login</button>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">SRNK Associates</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="login.html">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="upload.html">Upload Documents</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="download.html">Download Documents</a>
+        </li>
+      </ul>
     </div>
+  </div>
+</nav>
 
-    <!-- Sign-up Form -->
-    <div id="signup-form">
-        <h3>Don't have an account?</h3>
-        <label for="new-email">Email:</label>
-        <input type="email" id="new-email" placeholder="Enter your email" required>
-        <label for="new-password">Password:</label>
-        <input type="password" id="new-password" placeholder="Enter your password" required>
-        <button id="signup-button">Sign Up</button>
-    </div>
+<!-- Main Content -->
+<div class="container text-center my-5">
+    <h1>Welcome to SRNK Associates</h1>
+    <p class="lead">Your trusted partner for all accountancy and tax needs.</p>
+    <a href="login.html" class="btn btn-primary btn-lg">Get Started</a>
+</div>
 
-    <!-- Document Upload Form (Visible only when logged in) -->
-    <div id="upload-form" style="display:none;">
-        <h3>Upload Your Documents</h3>
-        <input type="file" id="file-upload" accept="application/pdf,image/*" />
-        <button id="upload-button">Upload</button>
-        <div id="upload-status"></div>
-    </div>
-
-    <!-- This message will show the current login status -->
-    <div id="user-status">Not logged in</div>
-
-    <script>
-        // Your Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyB9aamikPRI-98-Tv9IG65vvk4qkO-qTnE",
-            authDomain: "srnk-associates.firebaseapp.com",
-            projectId: "srnk-associates",
-            storageBucket: "srnk-associates.appspot.com",
-            messagingSenderId: "138345212232",
-            appId: "1:138345212232:web:68746eb7b305a16da86b7d"
-        };
-
-        // Initialize Firebase
-        const firebase = window.firebase;
-        firebase.initializeApp(firebaseConfig);
-
-        const auth = firebase.auth();
-        const storage = firebase.storage();
-
-        // Listen to authentication state changes
-        auth.onAuthStateChanged(user => {
-            if (user) {
-                document.getElementById('user-status').innerText = `Logged in as: ${user.email}`;
-                document.getElementById('login-form').style.display = 'none';
-                document.getElementById('signup-form').style.display = 'none';
-                document.getElementById('upload-form').style.display = 'block'; // Show upload form
-            } else {
-                document.getElementById('user-status').innerText = "Not logged in";
-                document.getElementById('login-form').style.display = 'block';
-                document.getElementById('signup-form').style.display = 'block';
-                document.getElementById('upload-form').style.display = 'none'; // Hide upload form
-            }
-        });
-
-        // Function to log in with email and password
-        function loginWithEmail() {
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-
-            auth.signInWithEmailAndPassword(email, password)
-                .then((userCredential) => {
-                    const user = userCredential.user;
-                    console.log('Logged in as:', user.email);
-                })
-                .catch((error) => {
-                    const errorCode = error.code;
-                    const errorMessage = error.message;
-                    alert(`Error: ${errorMessage}`);
-                });
-        }
-
-        // Function to sign up with email and password
-        function signupWithEmail() {
-            const email = document.getElementById('new-email').value;
-            const password = document.getElementById('new-password').value;
-
-            auth.createUserWithEmailAndPassword(email, password)
-                .then((userCredential) => {
-                    const user = userCredential.user;
-                    console.log('Signed up as:', user.email);
-                })
-                .catch((error) => {
-                    const errorCode = error.code;
-                    const errorMessage = error.message;
-                    alert(`Error: ${errorMessage}`);
-                });
-        }
-
-        // Function to upload document to Firebase Storage
-        function uploadDocument() {
-            const file = document.getElementById('file-upload').files[0];
-
-            if (file) {
-                const user = auth.currentUser;
-                const storageRef = storage.ref().child(`documents/${user.uid}/${file.name}`);
-                const uploadTask = storageRef.put(file);
-
-                uploadTask.on('state_changed', 
-                    (snapshot) => {
-                        // Track upload progress
-                        const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
-                        document.getElementById('upload-status').innerText = `Upload is ${progress}% done`;
-                    }, 
-                    (error) => {
-                        // Handle errors
-                        alert('Upload failed: ' + error.message);
-                    }, 
-                    () => {
-                        // Upload complete
-                        document.getElementById('upload-status').innerText = 'Upload successful!';
-                        console.log('Document uploaded successfully');
-                    }
-                );
-            } else {
-                alert('Please select a document to upload.');
-            }
-        }
-
-        // Attach event listeners
-        document.getElementById('login-button').addEventListener('click', loginWithEmail);
-        document.getElementById('signup-button').addEventListener('click', signupWithEmail);
-        document.getElementById('upload-button').addEventListener('click', uploadDocument);
-    </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+</html>
